--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,6 +2,7 @@ name: Update gist with WakaTime stats
 on:
   schedule:
     - cron:  '*/2 * * * *'
+  workflow_dispatch:    
 jobs:
   update-gist:
     runs-on: ubuntu-latest
